create static content for template:musicians/show

--- a/app/templates/musicians/show.hbs
+++ b/app/templates/musicians/show.hbs
@@ -1,1 +1,34 @@
-{{outlet}}
+<div class="bg-white mid-gray pa3">
+  <div class="flex">
+    <div class="w-25">
+      <div class="h4 w4 bg-mid-gray near-white f1 tc dtc v-mid">
+        DG
+      </div>
+    </div>
+    <div class="w-50 flex flex-column ml4 items-start">
+      <h3 class="ma0" data-test-rr="musician-name">
+        Dave Grohl
+      </h3>
+      <div class="mt3" data-test-rr="musician-age">
+        <span class="b mr2">
+          Born:
+        </span>
+        1969 (age 49 years old)
+      </div>
+      <h4 class="ma0mt3 mb3">
+        Bands
+      </h4>
+      <ul class="rr-list ma0 pl3">
+        <li class="rr-list-item" data-test-rr="band-name">
+          Nirvana
+        </li>
+        <li class="rr-list-item">
+          Foo Fighters
+        </li>
+        <li class="rr-list-item">
+          Them Crooked Vultures
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
