add dynamic segments to musicians/show template

--- a/app/templates/musicians/show.hbs
+++ b/app/templates/musicians/show.hbs
@@ -2,12 +2,12 @@
   <div class="flex">
     <div class="w-25">
       <div class="h4 w4 bg-mid-gray near-white f1 tc dtc v-mid">
-        DG
+        {{this.model.initials}}
       </div>
     </div>
     <div class="w-50 flex flex-column ml4 items-start">
       <h3 class="ma0" data-test-rr="musician-name">
-        Dave Grohl
+        {{this.model.name}}
       </h3>
       <div class="mt3" data-test-rr="musician-age">
         <span class="b mr2">
