Extract "musicians.new" template markup and logic to "musician-form" UI components - generate musician-form component - extract markup and logic from "musicians.new" template and controller to musician-form component and make respective changes - refactor controller:musicians/new and template:musicians/new to accommodate <MusicianForm/> component

--- a/app/templates/musicians/new.hbs
+++ b/app/templates/musicians/new.hbs
@@ -2,58 +2,5 @@
   <h3 data-test-rr="form-header">
     New Musician
   </h3>
-  <form {{on "submit" (perform this.createMusician)}}>
-    <div class="rr-form-row mb3">
-      <div class="mb2">
-        <label for="name">
-          Name
-        </label>
-      </div>
-      <div class="mb2">
-        <Input
-          @type="text"
-          @value={{model.name}}
-          id="name"
-          class="rr-input ml-auto w-100"
-          data-test-rr="musician-name"
-          {{on "blur" (fn this.setShowErrors "name")}}
-        />
-        {{#if this.showErrors.name}}
-          <div class="rr-form-field-error" data-test-rr="name-error">
-            {{v-get this.model "name" "message"}}
-          </div>
-        {{/if}}
-      </div>
-    </div>
-    <div class="rr-form-row">
-      <div class="mb2">
-        <label for="bands">
-          Bands
-        </label>
-      </div>
-      <div class="mb2">
-        <PowerSelectMultiple
-          @options={{this.bands}}
-          @selected={{this.selectedBands}}
-          @searchField="name"
-          @placeholder="Choose some bands"
-          @onChange={{this.updateSelectedBands}} as |band|
-        >
-          {{band.name}}
-        </PowerSelectMultiple>
-      </div>
-    </div>
-    <div class="rr-form-footer">
-      <div class="rr-button-panel">
-        <button
-          type="submit"
-          class="rr-action-button"
-          data-test-rr="create-button"
-          disabled={{this.isButtonDisabled}}
-        >
-          Create
-        </button>
-      </div>
-    </div>
-  </form>
+  <MusicianForm @musician={{this.model}} @afterSave={{gotoMusicianDetails}} />
 </div>
