--- a/app/templates/musicians/show.hbs
+++ b/app/templates/musicians/show.hbs
@@ -21,9 +21,11 @@
       {{#if this.model.bands.length}}
         <ul class="rr-list ma0 pl3">
           {{#each this.model.bands as |band|}}
-            <LinkTo @route="bands.band" @model={{band.id}}>
-              {{band.name}}
-            </LinkTo>
+            <li class="rr-list-item" data-test-rr="band-name">
+              <LinkTo @route="bands.band" @model={{band.id}}>
+                {{band.name}}
+              </LinkTo>
+            </li>
           {{/each}}
         </ul>
       {{else}}
