assign the current bands of the musician in the ember-power-select when editing a musician

--- a/app/templates/musicians/edit.hbs
+++ b/app/templates/musicians/edit.hbs
@@ -3,5 +3,9 @@
     Update
     {{this.model.name}}
   </h3>
-  <MusicianForm @musician={{this.model}} @afterSave={{gotoMusicianDetails}} />
+  <MusicianForm
+    @musician={{this.model}}
+    @afterSave={{gotoMusicianDetails}}
+    @selectedBands={{this.selectedBands}}
+  />
 </div>
