--- a/app/templates/components/musician-form.hbs
+++ b/app/templates/components/musician-form.hbs
@@ -47,7 +47,7 @@
         data-test-rr="create-button"
         disabled={{this.isButtonDisabled}}
       >
-        Create
+        {{if musician.isNew "Create" "Update"}}
       </button>
     </div>
   </div>
