Pre-select a band when creating a musician - fix minor bugs - create a musician in the "bands.band.details" routes - display all available musician names and link to "musician.show" route in "bands.band.details" route when the musician name is clicked - add "members" relationship to the "Band" model

--- a/app/templates/components/musician-form.hbs
+++ b/app/templates/components/musician-form.hbs
@@ -8,7 +8,7 @@
     <div class="mb2">
       <Input
         @type="text"
-        @value={{musician.name}}
+        @value={{@musician.name}}
         id="name"
         class="rr-input ml-auto w-100"
         data-test-rr="musician-name"
@@ -16,7 +16,7 @@
       />
       {{#if this.showErrors.name}}
         <div class="rr-form-field-error" data-test-rr="name-error">
-          {{v-get this.model "name" "message"}}
+          {{v-get @musician "name" "message"}}
         </div>
       {{/if}}
     </div>
@@ -47,7 +47,7 @@
         data-test-rr="create-button"
         disabled={{this.isButtonDisabled}}
       >
-        {{if musician.isNew "Create" "Update"}}
+        {{if @musician.isNew "Create" "Update"}}
       </button>
     </div>
   </div>
