fix a typo for pre-selectding a band when creating a new musician

--- a/app/templates/musicians/new.hbs
+++ b/app/templates/musicians/new.hbs
@@ -5,6 +5,6 @@
   <MusicianForm
     @musician={{this.model}}
     @afterSave={{gotoMusicianDetails}}
-    @selectedBand={{this.selectedBand}}
+    @selectedBands={{this.selectedBands}}
   />
 </div>
