--- a/app/templates/musicians/show.hbs
+++ b/app/templates/musicians/show.hbs
@@ -23,7 +23,11 @@
         <span class="b mr2">
           Born:
         </span>
-        1969 (age 49 years old)
+        {{#with this.model.yearOfBirth as |yob|}}
+          {{yob}}(age{{this.model.age}}years)
+        {{else}}
+          Not known
+        {{/with}}
       </div>
       <h4 class="ma0mt3 mb3">
         Bands
