discard model changes using rollbackAttributes() method of model

--- a/app/templates/components/musician-form.hbs
+++ b/app/templates/components/musician-form.hbs
@@ -59,6 +59,16 @@
   </div>
   <div class="rr-form-footer">
     <div class="rr-button-panel">
+      {{#if @afterCancel}}
+        <button
+          type="button"
+          class="rr-secondary-button mr3"
+          data-test-rr="cancel-button"
+          {{on "click" (perform this.discardChanges)}}
+        >
+          Cancel
+        </button>
+      {{/if}}
       <button
         type="submit"
         class="rr-action-button"
