--- a/app/templates/musicians/edit.hbs
+++ b/app/templates/musicians/edit.hbs
@@ -7,5 +7,6 @@
     @musician={{this.model}}
     @afterSave={{gotoMusicianDetails}}
     @selectedBands={{this.selectedBands}}
+    @afterCancel={{this.gotoMusicianDetails}}
   />
 </div>
